Spelling fixes and irl option for online

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id="consoleLog">
             <div class="consoleLogUnit">CheekOS [Version 73.65.78]</div>
             <div class="consoleLogUnit">(C) 2006 Cheek Corp. All rights reserved.</div>
-            <div class="consoleLogUnit">All lower case. No special charectors. Enter to send. Escape to close.</div>
+            <div class="consoleLogUnit">All lowercase. No special characters. Enter to send. Escape to close.</div>
           </div>
           <div id="consoleInput"></div>
           <div style="position: absolute;top: 90.5%;bottom: 2%;left: 1%;right: 95%;font-size: 2.5vw;text-align:center;user-select: none;">></div>
