--- a/online.html
+++ b/online.html
@@ -28,6 +28,7 @@
               <div class="platform" id="instagram"><img src="oinstagram.png" width="100%" height="100%"></div>
               <div class="platform" id="itchio"><img src="oitchio.png" width="100%" height="100%"></div>
               <div class="platform" id="steam"><img src="osteam.png" width="100%" height="100%"></div>
+              <div class="platform" id="earth"><img src="oearth.png" width="100%" height="100%"></div>
             </div>
             <div id="oinput"></div>
             <div id="confirm"></div>
